src/app/dag/dag.component.scss
@import "../../styles/colors";

:host {
  display: block;
}

.buffer {
  visibility: hidden;
  position: fixed;
  top: 0;
  right: 10000px;
  z-index: -999999;
}

/deep/ g.root {
  rect {
    stroke: #BED2FE !important;
    fill: #BED2FE !important;
  }

  .node-root {
    height: 82px;
    overflow: hidden;
  }

  .root-element {
    background-color: #BED2FE;
    height: 40px;
    width: 198px;
    position: relative;
    left: 1px;
    top: 1px;
  }

  .not-root {
    text-align: center;
    background-color: #EDF2FD;
    width: 198px;
    position: relative;
    left: 1px;
    height: 41px;
  }
}

/* This sets the color for "TK" nodes to a light blue green. */
/deep/ g.type-TK > rect {
  fill: #00ffd0;
}

/deep/ text {
  font-weight: 300;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
}

/deep/ .node rect {
  stroke: #999;
  fill: #fff;
  stroke-width: 1.5px;
}

/deep/ .edgePath path {
  stroke: #333;
  stroke-width: 1.5px;
}

/deep/ .node {
  cursor: pointer;
  height: 30px;
}

/deep/ .node .name {
  height: 100%;
  vertical-align: middle;
  margin-left: 10px;
}

/deep/ .node .status-icon {
  vertical-align: middle;
  padding-left: 20px;
}

/deep/ .node .status-pending {
  margin-left: 20px;
  border-radius: 50%;
  border: 1px solid #bbb;
  width: 20px;
  height: 20px;
}

/deep/ .node .node-root.rect {
  width: 200px;
  height: 42px;
  line-height:42px;

  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 185px;
}

/deep/ .node .node-root.summary {
  width: 200px;
  height: 82px;

  .status-icon {
    padding-left: 0;
  }
}

/deep/ .node .node-root.dashed-circle {
  width: 30px;
  height: 30px;
}

/deep/ .node rect {
  fill: #fff;
}

/deep/ .node circle {
  stroke: #bbb;
  stroke-dasharray: 3;
  fill: none;
  stroke-width: 2px;
}

/deep/ .edgePath path {
  stroke: #bbb;
  fill: #bbb;
  stroke-width: 2px;
  stroke-dasharray: 3;
}

/deep/ .node.skipped .phase {
  display: none;
}

/deep/ .node.succeeded {
  rect {
    stroke: $success;
    fill: $success-light;
  }
}

/deep/ .node.running {
  rect {
    stroke: $primary;
    fill: $primary-light;
  }
}

/deep/ .node.failed {
  rect {
    stroke: $danger;
    fill: $danger-light;
  }
}

/deep/ .node.error {
  rect {
    stroke: $danger;
    fill: $danger-light;
  }
}

/deep/ .node.pending .phase {
  background-color: orange;
}

/deep/ .node.failed .phase,
.node.error .phase {
  background-color: red;
}

/deep/ .node.selected {
  rect {
    stroke: #F6881F !important;
    stroke-width: 2px;
  }

  .root-element {
    //margin: 1px 1px 0 1px;
  }
}

/deep/ .node.selected circle {
  stroke: #F6881F;
  stroke-width: 2px;
}

